; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/iseries/extr_mf.c_iSeries_get_boot_time.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/iseries/extr_mf.c_iSeries_get_boot_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtc_time = type { i32, i32, i32, i32, i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @iSeries_get_boot_time() #0 {
  %1 = alloca %struct.rtc_time, align 8
  %2 = call i32 @mf_get_boot_rtc(%struct.rtc_time* %1)
  %3 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %1, i32 0, i32 5
  %4 = load i64, i64* %3, align 8
  %5 = add nsw i64 %4, 1900
  %6 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %1, i32 0, i32 4
  %7 = load i32, i32* %6, align 8
  %8 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %1, i32 0, i32 3
  %9 = load i32, i32* %8, align 4
  %10 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %1, i32 0, i32 2
  %11 = load i32, i32* %10, align 8
  %12 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %1, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %1, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = call i64 @mktime(i64 %5, i32 %7, i32 %9, i32 %11, i32 %13, i32 %15)
  ret i64 %16
}

declare dso_local i32 @mf_get_boot_rtc(%struct.rtc_time*) #1

declare dso_local i64 @mktime(i64, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
